--- a/src/Euclid.Agent/Euclid.Agent.csproj
+++ b/src/Euclid.Agent/Euclid.Agent.csproj
@@ -72,7 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgentNameAttribute.cs" />
+    <Compile Include="LocationOfCommandsAttribute.cs" />
+    <Compile Include="LocationOfProcessorsAttribute.cs" />
+    <Compile Include="LocationOfQueriesAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NamespaceFinderAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
