--- a/src/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
+++ b/src/Euclid.Framework.Cqrs.NHibernate/Euclid.Framework.Cqrs.NHibernate.csproj
@@ -62,15 +62,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
+    <ProjectReference Include="..\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
       <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
       <Name>Euclid.Common.Storage.NHibernate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\src\Euclid.Common\Euclid.Common.csproj">
+    <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\src\Euclid.Framework\Euclid.Framework.csproj">
+    <ProjectReference Include="..\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
     </ProjectReference>
