--- a/src/common/Euclid.Common/Euclid.Common.csproj
+++ b/src/common/Euclid.Common/Euclid.Common.csproj
@@ -64,6 +64,9 @@
     <Reference Include="Castle.Core">
       <HintPath>..\..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>E:\Program Files\Windows Azure SDK\v1.4\bin\Microsoft.WindowsAzure.StorageClient.dll</HintPath>
@@ -80,6 +83,7 @@
     <Compile Include="Configuration\IOverridableSetting.cs" />
     <Compile Include="Configuration\IOverridableSettingList.cs" />
     <Compile Include="Configuration\IOverridableSettings.cs" />
+    <Compile Include="Logging\Log4NetLoggingSourceExtensions.cs" />
     <Compile Include="Messaging\DispatcherNotConfiguredException.cs" />
     <Compile Include="Extensions\MimeTypes.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
