--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -4,61 +4,67 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <configSections>
-    <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
-  </configSections>
-  <appSettings>
-    <add key="webpages:Version" value="1.0.0.0" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
-    <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
-    <httpModules>
-      <add name="Glimpse" type="Glimpse.Core.Module" />
-    </httpModules>
-    <httpHandlers>
-      <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
-    </httpHandlers>
-  </system.web>
-  <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true">
-      <add name="Glimpse" type="Glimpse.Core.Module,Glimpse.Core" preCondition="integratedMode" />
-    </modules>
-    <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <add name="Glimpse" path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler,Glimpse.Core" preCondition="integratedMode" />
-    </handlers>
-  </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <glimpse enabled="true" />
+    <configSections>
+        <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
+    </configSections>
+    <connectionStrings>
+        <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+    </connectionStrings>
+    <appSettings>
+        <add key="webpages:Version" value="1.0.0.0" />
+        <add key="ClientValidationEnabled" value="true" />
+        <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+        <add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+    </appSettings>
+    <system.web>
+        <compilation debug="true" targetFramework="4.0">
+            <assemblies>
+                <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+                <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+                <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+                <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+                <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+            </assemblies>
+        </compilation>
+        <authentication mode="Forms">
+            <forms loginUrl="~/Account/LogOn" timeout="2880" />
+        </authentication>
+        <pages>
+            <namespaces>
+                <add namespace="System.Web.Helpers" />
+                <add namespace="System.Web.Mvc" />
+                <add namespace="System.Web.Mvc.Ajax" />
+                <add namespace="System.Web.Mvc.Html" />
+                <add namespace="System.Web.Routing" />
+                <add namespace="System.Web.WebPages" />
+            </namespaces>
+        </pages>
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
+        <httpModules>
+            <add name="Glimpse" type="Glimpse.Core.Module" />
+            <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
+        </httpModules>
+        <httpHandlers>
+            <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
+        </httpHandlers>
+    </system.web>
+    <system.webServer>
+        <modules runAllManagedModulesForAllRequests="true">
+            <add name="Glimpse" type="Glimpse.Core.Module,Glimpse.Core" preCondition="integratedMode" />
+            <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
+        </modules>
+        <validation validateIntegratedModeConfiguration="false" />
+        <handlers>
+            <add name="Glimpse" path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler,Glimpse.Core" preCondition="integratedMode" />
+        </handlers>
+    </system.webServer>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
+    <glimpse enabled="true" />
 </configuration>
