--- a/apps/ForumComposite/packages.config
+++ b/apps/ForumComposite/packages.config
@@ -6,4 +6,12 @@
   <package id="jQuery" version="1.6.2" />
   <package id="Glimpse" version="0.85" />
   <package id="Glimpse.Mvc3" version="0.85" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.2.0.4000" />
+  <package id="FluentNHibernate" version="1.3.0.717" />
+  <package id="log4net" version="1.2.10" />
 </packages>
