--- a/src/sdk/AgentPanel/AgentPanel.csproj
+++ b/src/sdk/AgentPanel/AgentPanel.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\..\..\packages\Castle.Windsor.2.5.3\lib\NET40\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Commons.Web.Mvc.PrecompiledViews">
-      <HintPath>C:\Users\jason turim\AppData\Local\Microsoft\VisualStudio\10.0\Extensions\Chris van de Steeg\Razor Single File Generator for MVC\1.0.5\Commons.Web.Mvc.PrecompiledViews.dll</HintPath>
+      <HintPath>..\..\..\packages\_external\Commons.Web.Mvc.PrecompiledViews.dll</HintPath>
     </Reference>
     <Reference Include="CommonServiceLocator.WindsorAdapter, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\CommonServiceLocator.WindsorAdapter.1.0\lib\NET35\CommonServiceLocator.WindsorAdapter.dll</HintPath>
