--- a/src/framework/Euclid.Framework.AgentMetadata/Euclid.Framework.AgentMetadata.csproj
+++ b/src/framework/Euclid.Framework.AgentMetadata/Euclid.Framework.AgentMetadata.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AgentMetadata.cs" />
     <Compile Include="AgentPartFormatterNotFoundException.cs" />
     <Compile Include="ArgumentMetadata.cs" />
+    <Compile Include="Formatters\DefaultFormatter.cs" />
     <Compile Include="Extensions\AgentMetadataCollectionExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
@@ -57,7 +58,7 @@
     <Compile Include="Formatters\QueryFormatter.cs" />
     <Compile Include="Formatters\ReadModelCollectionFormatter.cs" />
     <Compile Include="Formatters\ReadModelFormatter.cs" />
-    <Compile Include="InterfaceMetadata.cs" />
+    <Compile Include="Formatters\InputModelFormatter.cs" />
     <Compile Include="MethodMetadata.cs" />
     <Compile Include="PartCollection\CommandPartCollection.cs" />
     <Compile Include="PartCollection\InvalidAgentPartImplementationException.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="PartCollection\PartNotRegisteredException.cs" />
     <Compile Include="PartCollection\QueryPartCollection.cs" />
     <Compile Include="PartCollection\ReadModelPartCollection.cs" />
+    <Compile Include="PartMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyMetadata.cs" />
     <Compile Include="TypeMetadata.cs" />
