--- a/src/sdk/AgentConsole/app.config
+++ b/src/sdk/AgentConsole/app.config
@@ -73,7 +73,7 @@
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(),@created,@modified, 'Agent Console')" />
+			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Agent Console')" />
 			<parameter>
 				<parameterName value="@log_date" />
 				<dbType value="DateTime" />
@@ -116,20 +116,6 @@
 				<dbType value="String" />
 				<size value="2000" />
 				<layout type="log4net.Layout.ExceptionLayout" />
-			</parameter>
-			<parameter>
-				<parameterName value="@created" />
-				<dbType value="DateTime" />
-				<layout type="log4net.Layout.RawPropertyLayout">
-					<key value="Created" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@modified" />
-				<dbType value="DateTime" />
-				<layout type="log4net.Layout.RawPropertyLayout">
-					<key value="Modified" />
-				</layout>
 			</parameter>
 		</appender>
 
