--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -12,7 +12,7 @@
         <!-- 
             <add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
         -->
-		<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="test-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="1.0.0.0" />
@@ -75,18 +75,18 @@
 
 	<log4net>
 		<root>
-			<priority value="DEBUG"/>
+			<priority value="INFO"/>
 			<appender-ref ref="AdoNetAppender" />
 		</root>
 
 		<logger name="NHibernate">
-			<level value="INFO" />
+			<level value="ERROR" />
 		</logger>
 
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
 			<parameter>
 				<parameterName value="@log_date" />
