--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -29,9 +29,8 @@
   <repository path="..\src\framework\Euclid.Framework.AgentMetadata\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestComposite\packages.config" />
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
-  <repository path="..\src\sdk\PortableAgentPanel\packages.config" />
   <repository path="..\tests\Euclid.Sdk.NugetTests\packages.config" />
   <repository path="..\src\sdk\CompositeInspector\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
-  <repository path="..\sdk\LoggingAgent\packages.config" />
+  <repository path="..\src\sdk\LoggingAgent\packages.config" />
 </repositories>
