--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -115,7 +115,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\ForumController.cs" />
+    <Compile Include="Controllers\ModerationController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -212,6 +215,7 @@
     <Content Include="Content\chromatron\img\widgets\widget_add.png" />
     <Content Include="Content\chromatron\img\widgets\widget_decrease.png" />
     <Content Include="Content\chromatron\img\widgets\widget_increase.png" />
+    <Content Include="Content\chromatron\js\jquery\jquery.visualize.tooltip.js" />
     <Content Include="Content\chromatron\js\jquery\excanvas.js" />
     <Content Include="Content\chromatron\js\jquery\jquery-1.5.1.min.js" />
     <Content Include="Content\chromatron\js\jquery\jquery.datatables.js" />
@@ -316,7 +320,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Dashboard\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Euclid.Common.Configuration\Euclid.Common.Configuration.csproj">
@@ -383,25 +387,37 @@
     <Content Include="Views\Shared\Header\InfoWidgets.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\Header\Breadcrumbs.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Shared\LeftRail\Badge.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\Footer\Scripts.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\Header\Styles.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\Header\Scripts.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\Header\Meta.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Areas\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Forum\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Forum\Manage.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Forum\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Invite.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\User\Manage.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Moderation\Comments.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Moderation\Posts.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
