--- a/src/common/Euclid.Common/Euclid.Common.csproj
+++ b/src/common/Euclid.Common/Euclid.Common.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Pipeline\PipelinePriority.cs" />
     <Compile Include="Pipeline\StepConfigurationException.cs" />
     <Compile Include="Pipeline\StepExecutionException.cs" />
+    <Compile Include="Policy\IRuntimePolicy.cs" />
     <Compile Include="Storage\IBlob.cs" />
     <Compile Include="Storage\Binary\IBlobStorageSettings.cs" />
     <Compile Include="Storage\IModel.cs" />
