--- a/src/sdk/Euclid.TestingSupport/Euclid.TestingSupport.csproj
+++ b/src/sdk/Euclid.TestingSupport/Euclid.TestingSupport.csproj
@@ -77,7 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgentSpecificationTester.cs" />
+    <Compile Include="DefaultAgentSteps.cs" />
     <Compile Include="AutoMapperConfiguration.cs" />
     <Compile Include="AgentConfigurator.cs" />
     <Compile Include="DefaultSpecSteps.cs">
