--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -8,9 +8,7 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
 	</configSections>
 	<connectionStrings>
-		<!-- 
-		<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />
-		-->
+		<!--<add name="test-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=test-db;Integrated Security=SSPI;Persist Security Info=False;" />-->
 		<add name="test-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
