--- a/tests/Euclid.Framework.TestingFakes/Euclid.Framework.TestingFakes.csproj
+++ b/tests/Euclid.Framework.TestingFakes/Euclid.Framework.TestingFakes.csproj
@@ -80,13 +80,12 @@
     <Compile Include="Cqrs\FakeCommand4.cs" />
     <Compile Include="Cqrs\FakeCommandProcessor.cs" />
     <Compile Include="Cqrs\FakeReadModel.cs" />
-    <Compile Include="EventSourcing\WriteModel\Post.cs" />
-    <Compile Include="EventSourcing\WriteModel\PostDenormalizer.cs" />
+    <Compile Include="EventSourcing\DomainModel\Post.cs" />
+    <Compile Include="EventSourcing\PostDenormalizer.cs" />
     <Compile Include="EventSourcing\PostCreatedEvent.cs" />
     <Compile Include="EventSourcing\ReadModel\PostListing.cs" />
     <Compile Include="EventSourcing\ReadModel\UserProfile.cs" />
-    <Compile Include="EventSourcing\PostEventHandlers.cs" />
-    <Compile Include="EventSourcing\WriteModel\User.cs" />
+    <Compile Include="EventSourcing\DomainModel\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HostingFabric\FakeHostedService.cs" />
   </ItemGroup>
